la-messaging-demo: receiving message using webhook

--- a/messaging-demo/.devcontainer/docker-compose.yml
+++ b/messaging-demo/.devcontainer/docker-compose.yml
@@ -14,3 +14,11 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     
     command: sleep infinity
+
+    networks:
+      - la-network
+
+networks:
+  la-network:
+    name: la-network
+    external: true
