--- a/messaging-demo/.devcontainer/devcontainer.json
+++ b/messaging-demo/.devcontainer/devcontainer.json
@@ -56,6 +56,7 @@
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode",
 	"mounts": [
-		"source=/home/bangz/develop/13/py-envs,target=/home/vscode/venvs,type=bind,consistency=cached"
+		"source=/home/bangz/develop/13/py-envs,target=/home/vscode/venvs,type=bind,consistency=cached",
+		"source=/usr/local/bin,target=/home/vscode/ngrok,type=bind,consistency=cached"
 	]
 }
