--- a/messaging-demo/requirements.txt
+++ b/messaging-demo/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==2.1.1
 click==8.1.3
 cryptography==38.0.1
 Deprecated==1.2.13
+dnspython==2.2.1
 Flask==2.2.2
 Flask-RESTful==0.3.9
 idna==3.4
@@ -15,6 +16,7 @@ MarkupSafe==2.1.1
 pika==1.3.1
 pycparser==2.21
 PyJWT==2.6.0
+pymongo==4.3.2
 python-dotenv==0.21.0
 pytz==2022.5
 requests==2.28.1
