--- a/messaging-demo/requirements.txt
+++ b/messaging-demo/requirements.txt
@@ -1,4 +1,5 @@
 aniso8601==9.0.1
+cachetools==5.2.0
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
@@ -8,18 +9,29 @@ Deprecated==1.2.13
 dnspython==2.2.1
 Flask==2.2.2
 Flask-RESTful==0.3.9
+google-api-core==1.33.2
+google-auth==2.14.0
+google-cloud-dialogflow==2.16.1
+googleapis-common-protos==1.56.4
+grpcio==1.50.0
+grpcio-status==1.48.2
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jwcrypto==1.4.2
 MarkupSafe==2.1.1
 pika==1.3.1
+proto-plus==1.22.1
+protobuf==3.20.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
 PyJWT==2.6.0
 pymongo==4.3.2
 python-dotenv==0.21.0
 pytz==2022.5
 requests==2.28.1
+rsa==4.9
 six==1.16.0
 urllib3==1.26.12
 Werkzeug==2.2.2
